// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DayPicker renderButtonDates() renders correctly when start and end dates are selected 1`] = `
.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: hidden;
  max-width: 100%;
}

.emotion-0 {
  font-size: 2.25rem;
  margin: 0 12px 20px 12px;
}

<div
  className="emotion-1"
>
  <ButtonContent
    largeButtonValue="21"
    smallButtonValue="Apr, 2019"
  />
  <div
    className="emotion-0"
  >
    -
  </div>
  <ButtonContent
    largeButtonValue="01"
    smallButtonValue="May, 2019"
  />
</div>
`;

exports[`DayPicker renderButtonDates() renders correctly when start date is selected 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: hidden;
  max-width: 100%;
}

<div
  className="emotion-0"
>
  <ButtonContent
    largeButtonValue="21"
    smallButtonValue="Apr, 2019"
  />
</div>
`;

exports[`DayPicker renderHeader() renders correctly 1`] = `
.emotion-10 {
  z-index: 1;
}

.emotion-5 {
  font-weight: 700;
  background: #323232;
  color: #fff;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  max-width: 1030px;
  margin: 0 auto;
  padding: 0 0 0 15px;
}

.emotion-0 {
  display: none;
  width: 126px;
}

@media only screen and (min-width:768px) {
  .emotion-0 {
    display: block;
  }
}

.emotion-1 {
  font-size: 1.125rem;
  line-height: 0;
}

@media only screen and (min-width:768px) {
  .emotion-1 {
    padding-right: 71px;
    font-size: 1.375rem;
  }
}

.emotion-3 {
  height: 48px;
  width: 48px;
  padding: 0;
  line-height: 0;
  background: none;
  border: none;
  cursor: pointer;
}

@media only screen and (min-width:768px) {
  .emotion-3 {
    height: 55px;
    width: 55px;
  }
}

.emotion-2 {
  fill: white;
}

.emotion-9 {
  background: #fafafa;
}

.emotion-8 {
  display: grid;
  grid-template-columns: repeat(7,1fr);
  grid-gap: 1px;
  max-width: 1000px;
  margin: 1px auto 0 auto;
  padding: 0 1px;
  width: 100%;
  height: 30px;
  font-size: 0.875rem;
  line-height: 0.875rem;
  text-align: center;
  box-shadow: 0 1px 1px 0 rgba(0,0,0,0.08),0 0 1px 0 rgba(0,0,0,0.04);
}

@media only screen and (min-width:768px) {
  .emotion-8 {
    height: 40px;
  }
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
}

.emotion-6::after {
  content: "";
  position: absolute;
  right: -1px;
  height: 15px;
  border-left: 1px solid #eeeeee;
}

.emotion-6::after:last-child {
  border-left: none;
}

.emotion-6 undefined {
  font-size: 1.125rem;
}

<div
  className="emotion-10"
>
  <div
    className="emotion-5"
  >
    <div
      className="emotion-4"
    >
      <QantasLogo
        className="emotion-0"
      />
      <span
        className="emotion-1"
      >
        header label
      </span>
      <button
        aria-label="Close aria label"
        className="emotion-3"
        onClick={[Function]}
        type="button"
      >
        <CrossIcon
          className="emotion-2"
          height="32px"
          width="32px"
        />
      </button>
    </div>
  </div>
  <Tabs
    Icon={[Function]}
    endDate="Wed May 01 2019"
    endPlaceholder="return when?"
    endSelectedLabel="Return MEL"
    isDateRange={false}
    isSelectingStartDate={true}
    onTabClick={[Function]}
    startDate="Sun Apr 21 2019"
    startPlaceholder="depart when?"
    startSelectedLabel="Depart SYD"
  />
  <div
    className="emotion-9"
  >
    <div
      className="emotion-8"
    >
      <div
        className="emotion-6"
        key="Mon"
      >
        Mon
      </div>
      <div
        className="emotion-6"
        key="Tue"
      >
        Tue
      </div>
    </div>
  </div>
</div>
`;

exports[`DayPicker renderMonth() renders correctly 1`] = `
.emotion-3 {
  padding-top: 2px;
  text-align: center;
  background: #fafafa;
  pointer-events: auto;
}

.emotion-3:last-child {
  padding-bottom: 40px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 1.375rem;
  height: 58px;
}

@media only screen and (min-width:768px) {
  .emotion-1 {
    height: 78px;
  }
}

.emotion-0 {
  font-weight: 700;
  margin-right: 5px;
}

.emotion-2 {
  display: grid;
  grid-template-columns: repeat(7,1fr);
  grid-gap: 1px;
  max-width: 1000px;
  margin: 1px auto 0 auto;
  padding: 0 1px;
}

<div
  className="emotion-3"
  role="rowgroup"
  style={Object {}}
>
  <div
    className="emotion-1"
  >
    <span
      className="emotion-0"
    >
      Jun
    </span>
    <span>
      2019
    </span>
  </div>
  <div
    className="emotion-2"
  >
    <Day
      Icon={[Function]}
      currencyCode=""
      currencySymbol=""
      date={2019-06-05T14:00:00.000Z}
      endAriaLabel="Selected for return"
      endDate={2019-04-30T14:00:00.000Z}
      endLabel="Return"
      endSelectedLabel="MEL"
      isDateRange={false}
      isDesktopDevice={true}
      isDisabled={true}
      isEnd={false}
      isFirstDayOfMonth={false}
      isInRange={false}
      isLoadingPrice={false}
      isOutside={false}
      isSelectingStartDate={true}
      isStart={false}
      isToday={true}
      key="1559743200000"
      month="Jun"
      onDayClick={[Function]}
      onDayNavigate={[Function]}
      price={null}
      startAriaLabel="Selected for departure"
      startDate={2019-04-20T14:00:00.000Z}
      startLabel="Depart"
      startSelectedLabel="SYD"
      timestamp={1559743200000}
      year={2019}
    />
    <Day
      Icon={[Function]}
      currencyCode=""
      currencySymbol=""
      date={2019-06-06T14:00:00.000Z}
      endAriaLabel="Selected for return"
      endDate={2019-04-30T14:00:00.000Z}
      endLabel="Return"
      endSelectedLabel="MEL"
      isDateRange={false}
      isDesktopDevice={true}
      isDisabled={true}
      isEnd={false}
      isFirstDayOfMonth={false}
      isInRange={false}
      isLoadingPrice={false}
      isOutside={false}
      isSelectingStartDate={true}
      isStart={false}
      isToday={false}
      key="1559829600000"
      month="Jun"
      onDayClick={[Function]}
      onDayNavigate={[Function]}
      price={null}
      startAriaLabel="Selected for departure"
      startDate={2019-04-20T14:00:00.000Z}
      startLabel="Depart"
      startSelectedLabel="SYD"
      timestamp={1559829600000}
      year={2019}
    />
    <Day
      Icon={[Function]}
      currencyCode=""
      currencySymbol=""
      date={2019-06-07T14:00:00.000Z}
      endAriaLabel="Selected for return"
      endDate={2019-04-30T14:00:00.000Z}
      endLabel="Return"
      endSelectedLabel="MEL"
      isDateRange={false}
      isDesktopDevice={true}
      isDisabled={true}
      isEnd={false}
      isFirstDayOfMonth={false}
      isInRange={false}
      isLoadingPrice={false}
      isOutside={false}
      isSelectingStartDate={true}
      isStart={false}
      isToday={false}
      key="1559916000000"
      month="Jun"
      onDayClick={[Function]}
      onDayNavigate={[Function]}
      price={null}
      startAriaLabel="Selected for departure"
      startDate={2019-04-20T14:00:00.000Z}
      startLabel="Depart"
      startSelectedLabel="SYD"
      timestamp={1559916000000}
      year={2019}
    />
    <Day
      Icon={[Function]}
      currencyCode=""
      currencySymbol=""
      date={2019-06-08T14:00:00.000Z}
      endAriaLabel="Selected for return"
      endDate={2019-04-30T14:00:00.000Z}
      endLabel="Return"
      endSelectedLabel="MEL"
      isDateRange={false}
      isDesktopDevice={true}
      isDisabled={true}
      isEnd={false}
      isFirstDayOfMonth={false}
      isInRange={false}
      isLoadingPrice={false}
      isOutside={false}
      isSelectingStartDate={true}
      isStart={false}
      isToday={false}
      key="1560002400000"
      month="Jun"
      onDayClick={[Function]}
      onDayNavigate={[Function]}
      price={null}
      startAriaLabel="Selected for departure"
      startDate={2019-04-20T14:00:00.000Z}
      startLabel="Depart"
      startSelectedLabel="SYD"
      timestamp={1560002400000}
      year={2019}
    />
    <Day
      Icon={[Function]}
      currencyCode=""
      currencySymbol=""
      date={2019-06-09T14:00:00.000Z}
      endAriaLabel="Selected for return"
      endDate={2019-04-30T14:00:00.000Z}
      endLabel="Return"
      endSelectedLabel="MEL"
      isDateRange={false}
      isDesktopDevice={true}
      isDisabled={true}
      isEnd={false}
      isFirstDayOfMonth={false}
      isInRange={false}
      isLoadingPrice={false}
      isOutside={false}
      isSelectingStartDate={true}
      isStart={false}
      isToday={false}
      key="1560088800000"
      month="Jun"
      onDayClick={[Function]}
      onDayNavigate={[Function]}
      price={null}
      startAriaLabel="Selected for departure"
      startDate={2019-04-20T14:00:00.000Z}
      startLabel="Depart"
      startSelectedLabel="SYD"
      timestamp={1560088800000}
      year={2019}
    />
    <Day
      Icon={[Function]}
      currencyCode=""
      currencySymbol=""
      date={2019-06-10T14:00:00.000Z}
      endAriaLabel="Selected for return"
      endDate={2019-04-30T14:00:00.000Z}
      endLabel="Return"
      endSelectedLabel="MEL"
      isDateRange={false}
      isDesktopDevice={true}
      isDisabled={true}
      isEnd={false}
      isFirstDayOfMonth={false}
      isInRange={false}
      isLoadingPrice={false}
      isOutside={false}
      isSelectingStartDate={true}
      isStart={false}
      isToday={true}
      key="1560175200000"
      month="Jun"
      onDayClick={[Function]}
      onDayNavigate={[Function]}
      price={null}
      startAriaLabel="Selected for departure"
      startDate={2019-04-20T14:00:00.000Z}
      startLabel="Depart"
      startSelectedLabel="SYD"
      timestamp={1560175200000}
      year={2019}
    />
    <Day
      Icon={[Function]}
      currencyCode=""
      currencySymbol=""
      date={2019-06-11T14:00:00.000Z}
      endAriaLabel="Selected for return"
      endDate={2019-04-30T14:00:00.000Z}
      endLabel="Return"
      endSelectedLabel="MEL"
      isDateRange={false}
      isDesktopDevice={true}
      isDisabled={true}
      isEnd={false}
      isFirstDayOfMonth={false}
      isInRange={false}
      isLoadingPrice={false}
      isOutside={false}
      isSelectingStartDate={true}
      isStart={false}
      isToday={false}
      key="1560261600000"
      month="Jun"
      onDayClick={[Function]}
      onDayNavigate={[Function]}
      price={null}
      startAriaLabel="Selected for departure"
      startDate={2019-04-20T14:00:00.000Z}
      startLabel="Depart"
      startSelectedLabel="SYD"
      timestamp={1560261600000}
      year={2019}
    />
    <Day
      Icon={[Function]}
      currencyCode=""
      currencySymbol=""
      date={2019-06-12T14:00:00.000Z}
      endAriaLabel="Selected for return"
      endDate={2019-04-30T14:00:00.000Z}
      endLabel="Return"
      endSelectedLabel="MEL"
      isDateRange={false}
      isDesktopDevice={true}
      isDisabled={true}
      isEnd={false}
      isFirstDayOfMonth={false}
      isInRange={false}
      isLoadingPrice={false}
      isOutside={false}
      isSelectingStartDate={true}
      isStart={false}
      isToday={false}
      key="1560348000000"
      month="Jun"
      onDayClick={[Function]}
      onDayNavigate={[Function]}
      price={null}
      startAriaLabel="Selected for departure"
      startDate={2019-04-20T14:00:00.000Z}
      startLabel="Depart"
      startSelectedLabel="SYD"
      timestamp={1560348000000}
      year={2019}
    />
    <Day
      Icon={[Function]}
      currencyCode=""
      currencySymbol=""
      date={2019-06-13T14:00:00.000Z}
      endAriaLabel="Selected for return"
      endDate={2019-04-30T14:00:00.000Z}
      endLabel="Return"
      endSelectedLabel="MEL"
      isDateRange={false}
      isDesktopDevice={true}
      isDisabled={true}
      isEnd={false}
      isFirstDayOfMonth={false}
      isInRange={false}
      isLoadingPrice={false}
      isOutside={false}
      isSelectingStartDate={true}
      isStart={false}
      isToday={false}
      key="1560434400000"
      month="Jun"
      onDayClick={[Function]}
      onDayNavigate={[Function]}
      price={null}
      startAriaLabel="Selected for departure"
      startDate={2019-04-20T14:00:00.000Z}
      startLabel="Depart"
      startSelectedLabel="SYD"
      timestamp={1560434400000}
      year={2019}
    />
    <Day
      Icon={[Function]}
      currencyCode=""
      currencySymbol=""
      date={2019-06-14T14:00:00.000Z}
      endAriaLabel="Selected for return"
      endDate={2019-04-30T14:00:00.000Z}
      endLabel="Return"
      endSelectedLabel="MEL"
      isDateRange={false}
      isDesktopDevice={true}
      isDisabled={true}
      isEnd={false}
      isFirstDayOfMonth={false}
      isInRange={false}
      isLoadingPrice={false}
      isOutside={false}
      isSelectingStartDate={true}
      isStart={false}
      isToday={false}
      key="1560520800000"
      month="Jun"
      onDayClick={[Function]}
      onDayNavigate={[Function]}
      price={null}
      startAriaLabel="Selected for departure"
      startDate={2019-04-20T14:00:00.000Z}
      startLabel="Depart"
      startSelectedLabel="SYD"
      timestamp={1560520800000}
      year={2019}
    />
    <Day
      Icon={[Function]}
      currencyCode=""
      currencySymbol=""
      date={2019-06-15T14:00:00.000Z}
      endAriaLabel="Selected for return"
      endDate={2019-04-30T14:00:00.000Z}
      endLabel="Return"
      endSelectedLabel="MEL"
      isDateRange={false}
      isDesktopDevice={true}
      isDisabled={true}
      isEnd={false}
      isFirstDayOfMonth={false}
      isInRange={false}
      isLoadingPrice={false}
      isOutside={false}
      isSelectingStartDate={true}
      isStart={false}
      isToday={false}
      key="1560607200000"
      month="Jun"
      onDayClick={[Function]}
      onDayNavigate={[Function]}
      price={null}
      startAriaLabel="Selected for departure"
      startDate={2019-04-20T14:00:00.000Z}
      startLabel="Depart"
      startSelectedLabel="SYD"
      timestamp={1560607200000}
      year={2019}
    />
    <Day
      Icon={[Function]}
      currencyCode=""
      currencySymbol=""
      date={2019-06-16T14:00:00.000Z}
      endAriaLabel="Selected for return"
      endDate={2019-04-30T14:00:00.000Z}
      endLabel="Return"
      endSelectedLabel="MEL"
      isDateRange={false}
      isDesktopDevice={true}
      isDisabled={true}
      isEnd={false}
      isFirstDayOfMonth={false}
      isInRange={false}
      isLoadingPrice={false}
      isOutside={false}
      isSelectingStartDate={true}
      isStart={false}
      isToday={false}
      key="1560693600000"
      month="Jun"
      onDayClick={[Function]}
      onDayNavigate={[Function]}
      price={null}
      startAriaLabel="Selected for departure"
      startDate={2019-04-20T14:00:00.000Z}
      startLabel="Depart"
      startSelectedLabel="SYD"
      timestamp={1560693600000}
      year={2019}
    />
    <Day
      Icon={[Function]}
      currencyCode=""
      currencySymbol=""
      date={2019-06-17T14:00:00.000Z}
      endAriaLabel="Selected for return"
      endDate={2019-04-30T14:00:00.000Z}
      endLabel="Return"
      endSelectedLabel="MEL"
      isDateRange={false}
      isDesktopDevice={true}
      isDisabled={true}
      isEnd={false}
      isFirstDayOfMonth={false}
      isInRange={false}
      isLoadingPrice={false}
      isOutside={false}
      isSelectingStartDate={true}
      isStart={false}
      isToday={false}
      key="1560780000000"
      month="Jun"
      onDayClick={[Function]}
      onDayNavigate={[Function]}
      price={null}
      startAriaLabel="Selected for departure"
      startDate={2019-04-20T14:00:00.000Z}
      startLabel="Depart"
      startSelectedLabel="SYD"
      timestamp={1560780000000}
      year={2019}
    />
    <Day
      Icon={[Function]}
      currencyCode=""
      currencySymbol=""
      date={2019-06-18T14:00:00.000Z}
      endAriaLabel="Selected for return"
      endDate={2019-04-30T14:00:00.000Z}
      endLabel="Return"
      endSelectedLabel="MEL"
      isDateRange={false}
      isDesktopDevice={true}
      isDisabled={true}
      isEnd={false}
      isFirstDayOfMonth={false}
      isInRange={false}
      isLoadingPrice={false}
      isOutside={false}
      isSelectingStartDate={true}
      isStart={false}
      isToday={false}
      key="1560866400000"
      month="Jun"
      onDayClick={[Function]}
      onDayNavigate={[Function]}
      price={null}
      startAriaLabel="Selected for departure"
      startDate={2019-04-20T14:00:00.000Z}
      startLabel="Depart"
      startSelectedLabel="SYD"
      timestamp={1560866400000}
      year={2019}
    />
    <Day
      Icon={[Function]}
      currencyCode=""
      currencySymbol=""
      date={2019-06-19T14:00:00.000Z}
      endAriaLabel="Selected for return"
      endDate={2019-04-30T14:00:00.000Z}
      endLabel="Return"
      endSelectedLabel="MEL"
      isDateRange={false}
      isDesktopDevice={true}
      isDisabled={true}
      isEnd={false}
      isFirstDayOfMonth={false}
      isInRange={false}
      isLoadingPrice={false}
      isOutside={false}
      isSelectingStartDate={true}
      isStart={false}
      isToday={false}
      key="1560952800000"
      month="Jun"
      onDayClick={[Function]}
      onDayNavigate={[Function]}
      price={null}
      startAriaLabel="Selected for departure"
      startDate={2019-04-20T14:00:00.000Z}
      startLabel="Depart"
      startSelectedLabel="SYD"
      timestamp={1560952800000}
      year={2019}
    />
    <Day
      Icon={[Function]}
      currencyCode=""
      currencySymbol=""
      date={2019-06-20T14:00:00.000Z}
      endAriaLabel="Selected for return"
      endDate={2019-04-30T14:00:00.000Z}
      endLabel="Return"
      endSelectedLabel="MEL"
      isDateRange={false}
      isDesktopDevice={true}
      isDisabled={true}
      isEnd={false}
      isFirstDayOfMonth={false}
      isInRange={false}
      isLoadingPrice={false}
      isOutside={false}
      isSelectingStartDate={true}
      isStart={false}
      isToday={false}
      key="1561039200000"
      month="Jun"
      onDayClick={[Function]}
      onDayNavigate={[Function]}
      price={null}
      startAriaLabel="Selected for departure"
      startDate={2019-04-20T14:00:00.000Z}
      startLabel="Depart"
      startSelectedLabel="SYD"
      timestamp={1561039200000}
      year={2019}
    />
    <Day
      Icon={[Function]}
      currencyCode=""
      currencySymbol=""
      date={2019-06-21T14:00:00.000Z}
      endAriaLabel="Selected for return"
      endDate={2019-04-30T14:00:00.000Z}
      endLabel="Return"
      endSelectedLabel="MEL"
      isDateRange={false}
      isDesktopDevice={true}
      isDisabled={true}
      isEnd={false}
      isFirstDayOfMonth={false}
      isInRange={false}
      isLoadingPrice={false}
      isOutside={false}
      isSelectingStartDate={true}
      isStart={false}
      isToday={false}
      key="1561125600000"
      month="Jun"
      onDayClick={[Function]}
      onDayNavigate={[Function]}
      price={null}
      startAriaLabel="Selected for departure"
      startDate={2019-04-20T14:00:00.000Z}
      startLabel="Depart"
      startSelectedLabel="SYD"
      timestamp={1561125600000}
      year={2019}
    />
    <Day
      Icon={[Function]}
      currencyCode=""
      currencySymbol=""
      date={2019-06-22T14:00:00.000Z}
      endAriaLabel="Selected for return"
      endDate={2019-04-30T14:00:00.000Z}
      endLabel="Return"
      endSelectedLabel="MEL"
      isDateRange={false}
      isDesktopDevice={true}
      isDisabled={true}
      isEnd={false}
      isFirstDayOfMonth={false}
      isInRange={false}
      isLoadingPrice={false}
      isOutside={false}
      isSelectingStartDate={true}
      isStart={false}
      isToday={false}
      key="1561212000000"
      month="Jun"
      onDayClick={[Function]}
      onDayNavigate={[Function]}
      price={null}
      startAriaLabel="Selected for departure"
      startDate={2019-04-20T14:00:00.000Z}
      startLabel="Depart"
      startSelectedLabel="SYD"
      timestamp={1561212000000}
      year={2019}
    />
    <Day
      Icon={[Function]}
      currencyCode=""
      currencySymbol=""
      date={2019-06-23T14:00:00.000Z}
      endAriaLabel="Selected for return"
      endDate={2019-04-30T14:00:00.000Z}
      endLabel="Return"
      endSelectedLabel="MEL"
      isDateRange={false}
      isDesktopDevice={true}
      isDisabled={true}
      isEnd={false}
      isFirstDayOfMonth={false}
      isInRange={false}
      isLoadingPrice={false}
      isOutside={false}
      isSelectingStartDate={true}
      isStart={false}
      isToday={false}
      key="1561298400000"
      month="Jun"
      onDayClick={[Function]}
      onDayNavigate={[Function]}
      price={null}
      startAriaLabel="Selected for departure"
      startDate={2019-04-20T14:00:00.000Z}
      startLabel="Depart"
      startSelectedLabel="SYD"
      timestamp={1561298400000}
      year={2019}
    />
    <Day
      Icon={[Function]}
      currencyCode=""
      currencySymbol=""
      date={2019-06-24T14:00:00.000Z}
      endAriaLabel="Selected for return"
      endDate={2019-04-30T14:00:00.000Z}
      endLabel="Return"
      endSelectedLabel="MEL"
      isDateRange={false}
      isDesktopDevice={true}
      isDisabled={true}
      isEnd={false}
      isFirstDayOfMonth={false}
      isInRange={false}
      isLoadingPrice={false}
      isOutside={false}
      isSelectingStartDate={true}
      isStart={false}
      isToday={false}
      key="1561384800000"
      month="Jun"
      onDayClick={[Function]}
      onDayNavigate={[Function]}
      price={null}
      startAriaLabel="Selected for departure"
      startDate={2019-04-20T14:00:00.000Z}
      startLabel="Depart"
      startSelectedLabel="SYD"
      timestamp={1561384800000}
      year={2019}
    />
    <Day
      Icon={[Function]}
      currencyCode=""
      currencySymbol=""
      date={2019-06-25T14:00:00.000Z}
      endAriaLabel="Selected for return"
      endDate={2019-04-30T14:00:00.000Z}
      endLabel="Return"
      endSelectedLabel="MEL"
      isDateRange={false}
      isDesktopDevice={true}
      isDisabled={true}
      isEnd={false}
      isFirstDayOfMonth={false}
      isInRange={false}
      isLoadingPrice={false}
      isOutside={false}
      isSelectingStartDate={true}
      isStart={false}
      isToday={false}
      key="1561471200000"
      month="Jun"
      onDayClick={[Function]}
      onDayNavigate={[Function]}
      price={null}
      startAriaLabel="Selected for departure"
      startDate={2019-04-20T14:00:00.000Z}
      startLabel="Depart"
      startSelectedLabel="SYD"
      timestamp={1561471200000}
      year={2019}
    />
    <Day
      Icon={[Function]}
      currencyCode=""
      currencySymbol=""
      date={2019-06-26T14:00:00.000Z}
      endAriaLabel="Selected for return"
      endDate={2019-04-30T14:00:00.000Z}
      endLabel="Return"
      endSelectedLabel="MEL"
      isDateRange={false}
      isDesktopDevice={true}
      isDisabled={true}
      isEnd={false}
      isFirstDayOfMonth={false}
      isInRange={false}
      isLoadingPrice={false}
      isOutside={false}
      isSelectingStartDate={true}
      isStart={false}
      isToday={false}
      key="1561557600000"
      month="Jun"
      onDayClick={[Function]}
      onDayNavigate={[Function]}
      price={null}
      startAriaLabel="Selected for departure"
      startDate={2019-04-20T14:00:00.000Z}
      startLabel="Depart"
      startSelectedLabel="SYD"
      timestamp={1561557600000}
      year={2019}
    />
    <Day
      Icon={[Function]}
      currencyCode=""
      currencySymbol=""
      date={2019-06-27T14:00:00.000Z}
      endAriaLabel="Selected for return"
      endDate={2019-04-30T14:00:00.000Z}
      endLabel="Return"
      endSelectedLabel="MEL"
      isDateRange={false}
      isDesktopDevice={true}
      isDisabled={true}
      isEnd={false}
      isFirstDayOfMonth={false}
      isInRange={false}
      isLoadingPrice={false}
      isOutside={false}
      isSelectingStartDate={true}
      isStart={false}
      isToday={false}
      key="1561644000000"
      month="Jun"
      onDayClick={[Function]}
      onDayNavigate={[Function]}
      price={null}
      startAriaLabel="Selected for departure"
      startDate={2019-04-20T14:00:00.000Z}
      startLabel="Depart"
      startSelectedLabel="SYD"
      timestamp={1561644000000}
      year={2019}
    />
    <Day
      Icon={[Function]}
      currencyCode=""
      currencySymbol=""
      date={2019-06-28T14:00:00.000Z}
      endAriaLabel="Selected for return"
      endDate={2019-04-30T14:00:00.000Z}
      endLabel="Return"
      endSelectedLabel="MEL"
      isDateRange={false}
      isDesktopDevice={true}
      isDisabled={true}
      isEnd={false}
      isFirstDayOfMonth={false}
      isInRange={false}
      isLoadingPrice={false}
      isOutside={false}
      isSelectingStartDate={true}
      isStart={false}
      isToday={false}
      key="1561730400000"
      month="Jun"
      onDayClick={[Function]}
      onDayNavigate={[Function]}
      price={null}
      startAriaLabel="Selected for departure"
      startDate={2019-04-20T14:00:00.000Z}
      startLabel="Depart"
      startSelectedLabel="SYD"
      timestamp={1561730400000}
      year={2019}
    />
    <Day
      Icon={[Function]}
      currencyCode=""
      currencySymbol=""
      date={2019-06-29T14:00:00.000Z}
      endAriaLabel="Selected for return"
      endDate={2019-04-30T14:00:00.000Z}
      endLabel="Return"
      endSelectedLabel="MEL"
      isDateRange={false}
      isDesktopDevice={true}
      isDisabled={true}
      isEnd={false}
      isFirstDayOfMonth={false}
      isInRange={false}
      isLoadingPrice={false}
      isOutside={false}
      isSelectingStartDate={true}
      isStart={false}
      isToday={false}
      key="1561816800000"
      month="Jun"
      onDayClick={[Function]}
      onDayNavigate={[Function]}
      price={null}
      startAriaLabel="Selected for departure"
      startDate={2019-04-20T14:00:00.000Z}
      startLabel="Depart"
      startSelectedLabel="SYD"
      timestamp={1561816800000}
      year={2019}
    />
    <Day
      Icon={[Function]}
      currencyCode=""
      currencySymbol=""
      date={2019-06-30T14:00:00.000Z}
      endAriaLabel="Selected for return"
      endDate={2019-04-30T14:00:00.000Z}
      endLabel="Return"
      endSelectedLabel="MEL"
      isDateRange={false}
      isDesktopDevice={true}
      isDisabled={false}
      isEnd={false}
      isFirstDayOfMonth={false}
      isInRange={false}
      isLoadingPrice={false}
      isOutside={true}
      isSelectingStartDate={true}
      isStart={false}
      isToday={false}
      key="1561903200000"
      month="Jun"
      onDayClick={[Function]}
      onDayNavigate={[Function]}
      price={null}
      startAriaLabel="Selected for departure"
      startDate={2019-04-20T14:00:00.000Z}
      startLabel="Depart"
      startSelectedLabel="SYD"
      timestamp={1561903200000}
      year={2019}
    />
    <Day
      Icon={[Function]}
      currencyCode=""
      currencySymbol=""
      date={2019-07-01T14:00:00.000Z}
      endAriaLabel="Selected for return"
      endDate={2019-04-30T14:00:00.000Z}
      endLabel="Return"
      endSelectedLabel="MEL"
      isDateRange={false}
      isDesktopDevice={true}
      isDisabled={false}
      isEnd={false}
      isFirstDayOfMonth={false}
      isInRange={false}
      isLoadingPrice={false}
      isOutside={true}
      isSelectingStartDate={true}
      isStart={false}
      isToday={false}
      key="1561989600000"
      month="Jun"
      onDayClick={[Function]}
      onDayNavigate={[Function]}
      price={null}
      startAriaLabel="Selected for departure"
      startDate={2019-04-20T14:00:00.000Z}
      startLabel="Depart"
      startSelectedLabel="SYD"
      timestamp={1561989600000}
      year={2019}
    />
    <Day
      Icon={[Function]}
      currencyCode=""
      currencySymbol=""
      date={2019-07-02T14:00:00.000Z}
      endAriaLabel="Selected for return"
      endDate={2019-04-30T14:00:00.000Z}
      endLabel="Return"
      endSelectedLabel="MEL"
      isDateRange={false}
      isDesktopDevice={true}
      isDisabled={false}
      isEnd={false}
      isFirstDayOfMonth={false}
      isInRange={false}
      isLoadingPrice={false}
      isOutside={true}
      isSelectingStartDate={true}
      isStart={false}
      isToday={false}
      key="1562076000000"
      month="Jun"
      onDayClick={[Function]}
      onDayNavigate={[Function]}
      price={null}
      startAriaLabel="Selected for departure"
      startDate={2019-04-20T14:00:00.000Z}
      startLabel="Depart"
      startSelectedLabel="SYD"
      timestamp={1562076000000}
      year={2019}
    />
    <Day
      Icon={[Function]}
      currencyCode=""
      currencySymbol=""
      date={2019-07-03T14:00:00.000Z}
      endAriaLabel="Selected for return"
      endDate={2019-04-30T14:00:00.000Z}
      endLabel="Return"
      endSelectedLabel="MEL"
      isDateRange={false}
      isDesktopDevice={true}
      isDisabled={false}
      isEnd={false}
      isFirstDayOfMonth={false}
      isInRange={false}
      isLoadingPrice={false}
      isOutside={true}
      isSelectingStartDate={true}
      isStart={false}
      isToday={false}
      key="1562162400000"
      month="Jun"
      onDayClick={[Function]}
      onDayNavigate={[Function]}
      price={null}
      startAriaLabel="Selected for departure"
      startDate={2019-04-20T14:00:00.000Z}
      startLabel="Depart"
      startSelectedLabel="SYD"
      timestamp={1562162400000}
      year={2019}
    />
    <Day
      Icon={[Function]}
      currencyCode=""
      currencySymbol=""
      date={2019-07-04T14:00:00.000Z}
      endAriaLabel="Selected for return"
      endDate={2019-04-30T14:00:00.000Z}
      endLabel="Return"
      endSelectedLabel="MEL"
      isDateRange={false}
      isDesktopDevice={true}
      isDisabled={false}
      isEnd={false}
      isFirstDayOfMonth={false}
      isInRange={false}
      isLoadingPrice={false}
      isOutside={true}
      isSelectingStartDate={true}
      isStart={false}
      isToday={false}
      key="1562248800000"
      month="Jun"
      onDayClick={[Function]}
      onDayNavigate={[Function]}
      price={null}
      startAriaLabel="Selected for departure"
      startDate={2019-04-20T14:00:00.000Z}
      startLabel="Depart"
      startSelectedLabel="SYD"
      timestamp={1562248800000}
      year={2019}
    />
    <Day
      Icon={[Function]}
      currencyCode=""
      currencySymbol=""
      date={2019-07-05T14:00:00.000Z}
      endAriaLabel="Selected for return"
      endDate={2019-04-30T14:00:00.000Z}
      endLabel="Return"
      endSelectedLabel="MEL"
      isDateRange={false}
      isDesktopDevice={true}
      isDisabled={false}
      isEnd={false}
      isFirstDayOfMonth={false}
      isInRange={false}
      isLoadingPrice={false}
      isOutside={true}
      isSelectingStartDate={true}
      isStart={false}
      isToday={false}
      key="1562335200000"
      month="Jun"
      onDayClick={[Function]}
      onDayNavigate={[Function]}
      price={null}
      startAriaLabel="Selected for departure"
      startDate={2019-04-20T14:00:00.000Z}
      startLabel="Depart"
      startSelectedLabel="SYD"
      timestamp={1562335200000}
      year={2019}
    />
  </div>
</div>
`;

exports[`DayPicker renders DayPicker with props provided 1`] = `
<ButtonWithDialog
  Icon={[Function]}
  buttonLabel="Label"
  closeAriaLabel="Close aria label"
  closeOnBlur={false}
  contentPadding="0"
  dialogAriaLabel="dialog aria label"
  dialogStyles={
    Object {
      "background": "white",
      "boxSizing": "border-box",
      "display": "flex",
      "flexDirection": "column",
      "fontFamily": "\\"Ciutadella\\", sans-serif",
      "height": "100%",
      "label": "runway__dialog",
      "left": 0,
      "overflow": "auto",
      "position": "fixed",
      "top": "100%",
      "transition": "top 300ms ease-in-out",
      "width": "100%",
      "zIndex": 1000,
    }
  }
  hasDialogDimensions={false}
  onBeforeClose={[Function]}
  onBlur={[Function]}
  onClose={[Function]}
  onOpen={[Function]}
  placeHolder="Placeholder"
  renderButtonValue={[Function]}
  renderFooter={[Function]}
  renderHeader={[Function]}
  transitionStyles={
    Object {
      "entered": Object {
        "top": 0,
      },
      "entering": Object {
        "top": "100%",
      },
      "exiting": Object {
        "top": "100%",
      },
    }
  }
>
  <Component />
</ButtonWithDialog>
`;

exports[`DayPicker renders correctly with defaults 1`] = `
<ButtonWithDialog
  Icon={[Function]}
  buttonLabel="When"
  closeAriaLabel="Close dialog"
  closeOnBlur={false}
  contentPadding="0"
  dialogAriaLabel="Select dates"
  dialogStyles={
    Object {
      "background": "white",
      "boxSizing": "border-box",
      "display": "flex",
      "flexDirection": "column",
      "fontFamily": "\\"Ciutadella\\", sans-serif",
      "height": "100%",
      "label": "runway__dialog",
      "left": 0,
      "overflow": "auto",
      "position": "fixed",
      "top": "100%",
      "transition": "top 300ms ease-in-out",
      "width": "100%",
      "zIndex": 1000,
    }
  }
  hasDialogDimensions={false}
  onBeforeClose={[Function]}
  onBlur={[Function]}
  onClose={[Function]}
  onOpen={[Function]}
  placeHolder="When?"
  renderButtonValue={[Function]}
  renderFooter={[Function]}
  renderHeader={[Function]}
  transitionStyles={
    Object {
      "entered": Object {
        "top": 0,
      },
      "entering": Object {
        "top": "100%",
      },
      "exiting": Object {
        "top": "100%",
      },
    }
  }
>
  <Component />
</ButtonWithDialog>
`;
